Finished TCP client

--- a/chat-application/client/build.gradle
+++ b/chat-application/client/build.gradle
@@ -1,5 +1,15 @@
 plugins {
     id 'java'
+    id 'application'
+}
+
+application {
+    mainClass.set('gcyganek.Main')
+}
+
+
+run {
+    standardInput = System.in
 }
 
 group 'gcyganek'
