--- a/rest/build.gradle
+++ b/rest/build.gradle
@@ -17,6 +17,8 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:2.6.4'
 }
 
 test {
