--- a/rest/build.gradle
+++ b/rest/build.gradle
@@ -2,6 +2,11 @@ plugins {
     id 'org.springframework.boot' version '2.6.4'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
+    id 'application'
+}
+
+application {
+    mainClass.set('gcyganek.rest.Main')
 }
 
 group 'gcyganek'
