--- a/rabbitmq-mountain-trip-app/build.gradle
+++ b/rabbitmq-mountain-trip-app/build.gradle
@@ -11,8 +11,9 @@ repositories {
 
 dependencies {
     implementation 'com.rabbitmq:amqp-client:5.11.0'
-    implementation 'org.slf4j:slf4j-api:1.7.29'
-    testImplementation 'org.slf4j:slf4j-simple:1.6.2'
+
+    implementation 'org.apache.logging.log4j:log4j-api:2.17.2'
+    implementation 'org.apache.logging.log4j:log4j-core:2.17.2'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
