--- a/rabbitmq-mountain-trip-app/build.gradle
+++ b/rabbitmq-mountain-trip-app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
 group 'gcyganek'
@@ -15,10 +16,21 @@ dependencies {
     implementation 'org.apache.logging.log4j:log4j-api:2.17.2'
     implementation 'org.apache.logging.log4j:log4j-core:2.17.2'
 
+    implementation 'org.slf4j:slf4j-api:1.7.29'
+    testImplementation 'org.slf4j:slf4j-simple:1.6.2'
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
 }
 
 test {
     useJUnitPlatform()
+}
+
+run {
+    standardInput = System.in
+}
+
+application {
+    mainClass = System.getProperty("classToExecute", "gcyganek.app.admin.AdminMain")
 }
