--- a/rabbitmq-mountain-trip-app/build.gradle
+++ b/rabbitmq-mountain-trip-app/build.gradle
@@ -18,6 +18,7 @@ dependencies {
 
     implementation 'org.slf4j:slf4j-api:1.7.29'
     testImplementation 'org.slf4j:slf4j-simple:1.6.2'
+    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.17.2'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
